The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-11-18 AP 1.2RC3 fix missing schema in EditGrid (r: Martin Susil)
    <li>2004-11-16 AP 1.2RC3 fix pg_dump option
    <li>2004-11-10 AP 1.2RC2 Remove tablespace from schema (pgsql post-beta4 change)
    <li>2004-11-10 AP 1.2RC2 Fix properties for multiply inherited tables (r: Riccardo G. Facchini)
    <li>2004-11-10 AP 1.2RC2 Fix OSX issue (r: Patrick Hatcher)
    <li>2004-11-09 AP 1.2RC2 Fix remembering SSL connection parameter (r: Justin Clift)
    <li>2004-11-09 AP 1.2RC2 Fix GTK comboboxes (r: Tim Booth)
    <li>2004-11-05 AP 1.2RC2 Disable changing parameters of connected servers
    <li>2004-11-04 AP 1.2RC2 Fix duplicate functions in Cast dialog (r: Alexander Borkowski)
    <li>2004-11-03 AP 1.2RC1 MSW Combobox Workaround: missing EVT_TEXT events
    <li>2004-11-02 AP 1.2RC1 Fix some type related issues (r: Alexander Borkowski)
    <li>2004-11-02 AP 1.2RC1 Fix some owner change related issues (r: Alexander Borkowski)
    <li>2004-10-29 AP 1.2RC1 full casting in utffile fixing some compilers
    <li>2004-10-27 AP 1.2RC1 Workaround for wxGrid bug not returning selected rows
    <li>2004-10-27 AP 1.2RC1 Fix user/group selection in privileges (r: Walter Haslbeck, Gary Doades)
    <li>2004-10-27 AP 1.2RC1 Fix refresh when dropping single object from collection listview
    <li>2004-10-26 AP 1.2RC1 fix $$ translation problem (r: Miha Radej)
    <li>2004-10-22 AP 1.2RC1 fix Edit Tool to store data when selecting a row (r: Virgil Frum)
    <li>2004-10-22 AP 1.2RC1 fix Query Tool which marked text as changed when scrolling (r: Gary Doades)