@@ -18,6 +18,7 @@
 
 	<li>Enhancements
 	<ul>
+		<li>Display column comments in table definition
 		<li>Allow unix socket connections
 		<li>Allow server registration without connect
 		<li>Sequence: calculate next value to be expected
