@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-11-18 AP 1.2RC3 fix change column dialog (r: Walter Haslbeck)
     <li>2004-11-18 AP 1.2RC3 fix missing schema in EditGrid (r: Martin Susil)
     <li>2004-11-16 AP 1.2RC3 fix pg_dump option
     <li>2004-11-10 AP 1.2RC2 Remove tablespace from schema (pgsql post-beta4 change)
